--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -9,10 +9,6 @@
     <meta name="author" content="">
 
     <title>Home</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="/css/simple-sidebar.css" rel="stylesheet">
 
@@ -191,7 +187,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 
-                                <img class="img-profile rounded-circle" src="/img/profile.jpg">
+                                <img class="img-profile rounded-circle" src="/img/pm.jpg">
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
