--- a/views/pages/redirectPage.ejs
+++ b/views/pages/redirectPage.ejs
@@ -1,21 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Please login!</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/simple-sidebar.css">
 </head>
+
 <body>
-    <h1 class="text-center display-3">Please login first !!!</h1> <br> 
+    <h1 class="text-center display-3">Please login first !!!</h1> <br>
     <hr>
     <div class="text-center display-4">
-        Page will redirect in 3 seconds
+        Redirecting...
     </div>
-   
+    <div class="container">
+        <div class="crad-body">
+            <h4 class="small font-weight-bold">redirect to login... <span class="float-right" id="per"></span></h4>
+            <div class="progress mb-4" id="prg">
+
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
-        <script>
-            setTimeout("location.href = '/login';",3000);
-        </script>
+<script src="/jquery/jquery.min.js"></script>
+<script> 
+    $('#per').html('0%')
+    $('#prg').html(
+        '<div class="progress-bar bg-danger" id="prg" role="progressbar" style="width: 0%" aria-valuenow="20"aria-valuemin="0" aria-valuemax="100"></div>'
+        )
+
+    setTimeout(() => {
+        $('#per').html('20%')
+        $('#prg').html(
+            '<div class="progress-bar bg-danger" id="prg" role="progressbar" style="width: 20%" aria-valuenow="20"aria-valuemin="0" aria-valuemax="100"></div>'
+            )
+    }, 500)
+    setTimeout(() => {
+        $('#per').html('60%')
+        $('#prg').html(
+            '<div class="progress-bar bg-danger" id="prg" role="progressbar" style="width: 60%" aria-valuenow="20"aria-valuemin="0" aria-valuemax="100"></div>'
+            )
+    }, 1000)
+    setTimeout(() => {
+        $('#per').html('80%')
+        $('#prg').html(
+            '<div class="progress-bar bg-danger" id="prg" role="progressbar" style="width: 80%" aria-valuenow="20"aria-valuemin="0" aria-valuemax="100"></div>'
+            )
+    }, 1500)
+    setTimeout(() => {
+        $('#per').html('100%')
+        $('#prg').html(
+            '<div class="progress-bar bg-danger" id="prg" role="progressbar" style="width: 100%" aria-valuenow="20"aria-valuemin="0" aria-valuemax="100"></div>'
+            )
+    }, 2000)
+
+    setTimeout("location.href = '/login';",2100);
+</script>
+
 </html>
